// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profilesWithRulesToSelection appends new profiles with rules to a selection and keeps existing 1`] = `
Array [
  Object {
    "id": "1",
    "ruleRefIds": Array [
      "profile1-rule3",
      "profile1-rule4",
    ],
  },
  Object {
    "id": "99",
    "ruleRefIds": Array [
      "profile99-rule1",
      "profile99-rule2",
    ],
  },
  Object {
    "id": "2",
    "ruleRefIds": Array [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection converts profiles with rules to brand new selection 1`] = `
Array [
  Object {
    "id": "1",
    "ruleRefIds": Array [
      "profile1-rule1",
      "profile1-rule2",
    ],
  },
  Object {
    "id": "2",
    "ruleRefIds": Array [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection converts profiles with rules to brand new selection using only option 1`] = `
Array [
  Object {
    "id": "1",
    "ruleRefIds": Array [
      "profile1-rule1",
      "profile1-rule2",
    ],
  },
  Object {
    "id": "2",
    "ruleRefIds": Array [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;

exports[`profilesWithRulesToSelection errors gracefully on missing rules 1`] = `
Array [
  Object {
    "id": "1",
    "ruleRefIds": Array [],
  },
  Object {
    "id": "2",
    "ruleRefIds": Array [],
  },
]
`;

exports[`profilesWithRulesToSelection keeps existing profile rules selection if they match new profiles 1`] = `
Array [
  Object {
    "id": "1",
    "ruleRefIds": Array [
      "profile1-rule3",
      "profile1-rule4",
    ],
  },
  Object {
    "id": "2",
    "ruleRefIds": Array [
      "profile2-rule1",
      "profile2-rule2",
    ],
  },
]
`;
